# poetry_practice

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
my_poetry_project/: main.py
