[tool.poetry]
name = "my-poetry-project"
version = "1.1"
description = "Your package description"
authors = ["Rahul <rahoul2010@gmail.com>"]
readme = "README.md"
packages = [{ include = "my_poetry_project" }]  # Ensure Poetry knows where your package is

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "1.0.0"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
